Changelog for mk-deadlock-logger:

   * --clear-deadlocks did not work with --interval (issue 942).
   * Added DSN OPTIONS section to POD (issue 55).

2010-01-06: version 1.0.19

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-10-30: version 1.0.18

   * Added --create-dest-table (issue 386).
   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-09-30: version 1.0.17

   * Added --pid (issue 391).

2009-07-31: version 1.0.16

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).

2009-06-02: version 1.0.15

   * Sorted options alphabetically in the POD.
   * Script did not die if --pid file already existed (issue 383).
   * Removed the --source option; source DSN or --host, etc. is required.
   * Made --print default unless --dest or --print is explicitly given.
   * 'h' DSN part is no longer required (this prevented use of 'S').
   * Changed the --time option to --run-time.
   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --numip long option.  Use --numeric-ip instead.
   * Removed the --setvars long option.  Use --set-vars instead.
   * Removed the -c short option.  Use --collapse instead.
   * Removed the -C short option.  Use --columns instead.
   * Removed the -d short option.  Use --dest instead.
   * Removed the -i short option.  Use --interval instead.
   * Removed the -n short option.  Use --numeric-ip instead.
   * Removed the -p short option.  Use --print instead.
   * Removed the -s short option.  Use --source instead.
   * Removed the -t short option.  Use --tab instead.
   * Removed the -m short option.  Use --run-time instead.
   * Added the --config option for issue 231.
   * Added the --log option for issue 241.
   * Added the --clear-deadlocks option (issue 75).
   * Added the following options for issue 248:
   *    --charset (-A)