@@ -1,5 +1,6 @@
 Changelog for mk-deadlock-logger:
 
+   * The same deadlock was reprinted with --interval (issue 943).
    * --clear-deadlocks did not work with --interval (issue 942).
    * Added DSN OPTIONS section to POD (issue 55).
 
